--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ a {
   text-decoration: none;
 }
 
-.marquee-text {
+/* .marquee-text {
   font-size: 29px;
   font-weight: 600;
   margin: 60px 0px;
@@ -67,4 +67,4 @@ a {
   justify-content: center;
   gap: 15px;
   margin-top: 20px;
-}
+} */
